# code_exercise

./: README.md
src/Trying/: CMakeLists.txt
src/Trying/include/Trying/: Class.h
src/Trying/src/: Class.cpp  main.cpp
